[gd_scene load_steps=23 format=3 uid="uid://duntjmncl5gmd"]

[ext_resource type="Script" uid="uid://bjs1ic8tlm774" path="res://enemy.gd" id="1_7k104"]
[ext_resource type="Texture2D" uid="uid://c8ew70ahhgb0x" path="res://assets/sprites/enemy/knight-Sheet_greyfx.png" id="2_4gyqm"]
[ext_resource type="PackedScene" uid="uid://ck7oe1y3pf8u7" path="res://zona_de_muerte.tscn" id="3_qi2p4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("2_4gyqm")
region = Rect2(540, 360, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_4gyqm")
region = Rect2(0, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_4gyqm")
region = Rect2(90, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_4gyqm")
region = Rect2(180, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_4gyqm")
region = Rect2(270, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_4gyqm")
region = Rect2(360, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_4gyqm")
region = Rect2(450, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_4gyqm")
region = Rect2(540, 0, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_4gyqm")
region = Rect2(0, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("2_4gyqm")
region = Rect2(90, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("2_4gyqm")
region = Rect2(180, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("2_4gyqm")
region = Rect2(270, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("2_4gyqm")
region = Rect2(360, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("2_4gyqm")
region = Rect2(450, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("2_4gyqm")
region = Rect2(540, 90, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2u8i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(39, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iifgy"]
size = Vector2(18, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(14, 42)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_7k104")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g2u8i")
animation = &"new_animation"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_qi2p4")

[node name="PatrolPointA" type="Node2D" parent="."]
position = Vector2(-41, -1)

[node name="PatrolPointB" type="Node2D" parent="."]
position = Vector2(82, 1)

[node name="ZonaDeMuerte" parent="." instance=ExtResource("3_qi2p4")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaDeMuerte"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_iifgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_4gyqm")
